feat(app): funcionando agendamento pedido estoque dash cliente e fun